--- a/wp-content/themes/collects-2021/css/new.css
+++ b/wp-content/themes/collects-2021/css/new.css
@@ -317,6 +317,131 @@ button.owl-dot.active {
     object-fit: contain;
 }
 
+/*Gravity Contact Form*/
+/* div#gform_wrapper_1 input.large {
+    padding: 15px !important;
+    border-radius: 13px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+div#gform_wrapper_1 .textarea.large {
+    border-radius: 13px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    padding: 18px !important;
+} */
+
+.gform_wrapper.gravity-theme input[type=color],
+.gform_wrapper.gravity-theme input[type=date],
+.gform_wrapper.gravity-theme input[type=datetime-local],
+.gform_wrapper.gravity-theme input[type=datetime],
+.gform_wrapper.gravity-theme input[type=email],
+.gform_wrapper.gravity-theme input[type=month],
+.gform_wrapper.gravity-theme input[type=number],
+.gform_wrapper.gravity-theme input[type=password],
+.gform_wrapper.gravity-theme input[type=search],
+.gform_wrapper.gravity-theme input[type=tel],
+.gform_wrapper.gravity-theme input[type=text],
+.gform_wrapper.gravity-theme input[type=time],
+.gform_wrapper.gravity-theme input[type=url],
+.gform_wrapper.gravity-theme input[type=week], .gform_wrapper.gravity-theme select, .gform_wrapper.gravity-theme textarea {
+    border-radius: 13px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    padding: 15px !important;
+}
+
+.gform_wrapper.gravity-theme textarea  {
+    padding: 18px !important;
+}
+
+fieldset#field_1_6 {
+    text-align: center;
+    margin: 0;
+}
+
+fieldset#field_1_6 label#label_1_6_1 {
+    font-weight: 600;
+    font-size: 16px;
+}
+
+
+fieldset#field_1_5 {
+    text-align: center;
+}
+
+
+fieldset#field_1_5 label.gfield_consent_label {
+    font-weight: 600;
+    font-size: 16px;
+}
+
+.gform_wrapper.gravity-theme .gform_footer, .gform_wrapper.gravity-theme .gform_page_footer {
+    margin: 0;
+    padding: 0 0 20px;
+    text-align: center;
+}
+
+.gform_wrapper.gravity-theme .gform_footer button, .gform_wrapper.gravity-theme .gform_footer input, .gform_wrapper.gravity-theme .gform_page_footer button, .gform_wrapper.gravity-theme .gform_page_footer input {
+    padding: 5px 65px;
+    font-size: 20px;
+    border-radius: 10px;
+    height: unset;
+    background-color: #143258;
+    color: #fff;
+    border: none;
+    letter-spacing: 2px;
+}
+
+/*-- hide extra labels*/
+.gform_wrapper.gravity-theme .hidden_label .gfield_label, .gform_wrapper.gravity-theme .hidden_sub_label, .gform_wrapper.gravity-theme .screen-reader-text {
+    width: unset;
+    clip-path: unset;
+    position: unset;
+    height: unset;
+    font-weight: 600;
+    font-size: 16px;
+}
+
+.gfield_label.gfield_label_before_complex {
+    clip-path: inset(50%)!important;
+    display: none!important;
+}
+
+div#field_1_8 .gfield_label {
+    display: none;
+    margin: 0;
+}
+
+
+#field_1_5 span.gfield_required.gfield_required_text {
+    width: 0;
+    height: 0;
+    font-size:0;
+    
+}
+
+span.gfield_required.gfield_required_text::before {
+    content: "*";
+    width: 10px;
+    height: 10px;
+    display: block;
+    font-size: 30px;
+    position: absolute;
+    font-style: normal;
+}
+
+#field_1_5 span.gfield_required.gfield_required_text::before {color: red;}
+
+.gform_wrapper .gfield_required .gfield_required_custom, .gform_wrapper .gfield_required .gfield_required_text {
+    font-style: italic;
+    font-weight: 400;
+    width: 0;
+}
+
+.gfield_description.validation_message.gfield_validation_message {
+    border-radius: 10px;
+    padding: 5px;
+}
+
 
 @media only screen and (max-width: 1200px) {
     ._social-media {
