--- a/wp-content/themes/collects-2021/css/new-styles.css
+++ b/wp-content/themes/collects-2021/css/new-styles.css
@@ -1,4 +1,4 @@
-.contact h2{
+/* .contact h2{
     padding: 12px 0px 12px 0px;
     font-size: 24px;
     color: #112f5e;
@@ -16,4 +16,4 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
+} */
