--- a/wp-content/themes/collects-2021/css/new.css
+++ b/wp-content/themes/collects-2021/css/new.css
@@ -7,6 +7,7 @@
     position: relative;
     background: url(https://wallpapers-hub.art/wallpaper-images/471490.jpg);
     background-size: cover;
+    background-position: center;
     height: 300px;
     display: flex;
     justify-content: center;
@@ -24,17 +25,18 @@
 
 /*CARDS*/
 
-.cards {
+._cards {
     display: flex;
     justify-content: center;
     padding: 30px 150px;
+    background-color: #fff;
   }
   
-.cards .card {
+._cards ._card {
     border: hidden;
 }
   
-.cards div.card {
+._cards div._card {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -44,25 +46,26 @@
     padding: 1rem 1.5rem;
 }
 
-.cards div.card:first-child {
+._cards div._card:first-child {
     margin-left: 0;
 }
 
-.cards .icon {
+._cards .icon {
     width: 200px;
 }
 
-.cards div.card img {
-    width: 100%;
+._cards div._card img {
+    width: 120px;
 }
 
-.cards div.card h3 {
-    font-size: 100%;
-    margin: 16px 0;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 700;
-    font-size: 15px;
+._cards div._card h3 {
     color: #112f5e;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 100%;
+    font-size: 15px;
+    font-weight: 600;
+    line-height: 1.19;
+    margin: 16px 0;
     text-decoration: none;
     text-transform: uppercase;
     width: 115px;
@@ -78,8 +81,8 @@
 
 .text-blocks .text{
     text-align: center;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 500;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
     color: #ffffff;
     text-decoration: none;
     background-color: #153258;
@@ -88,6 +91,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    line-height: 1.53;
 }
 
 .text-blocks .text-middle{
@@ -95,24 +99,35 @@
 }
 
 
-.text-fullwidth{
-    background-color: #fff;
+.text-fullwidth {
+    background-color: #f8f8f8;
     color: rgb(26, 54, 95);
     margin: 55px;
     text-align: center;
     display: flex;
     justify-content: center;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Open Sans', sans-serif!important;
+}
+.text-fullwidth a {
+    color: #1a365f;
+    text-decoration: none;
+    font-weight: bold;
 }
 .text-fullwidth ._content {
     max-width: 700px;
 }
+.text-fullwidth ._content p, .text-fullwidth ._content span {
+    font-family: 'Open Sans', sans-serif!important;
+}
 .text-fullwidth h2,h3,h4 {
     text-transform: uppercase;
-    font-weight: bold;
+    font-weight: 500;
+    letter-spacing: normal;
+    font-size: 25px;
 }
 .text-fullwidth h2, .text-fullwidth h3, .text-fullwidth h4, .text-fullwidth h5, .text-fullwidth h6, .text-fullwidth  p, .text-fullwidth  ul, .text-fullwidth  li {
     color: #112f5e;
+    font-family: 'Oswald', sans-serif!important;
 }
 
 /*Brands*/
@@ -124,6 +139,11 @@
     align-items: center;
     padding: 45px;
     gap: 25px;
+}
+
+._brand img {
+    height: 70px;
+    object-fit: contain;
 }
 
 /*Footer*/
@@ -354,117 +374,46 @@ div#gform_wrapper_1 .textarea.large {
     padding: 18px !important;
 } */
 
-.gform_wrapper.gravity-theme input[type=color],
-.gform_wrapper.gravity-theme input[type=date],
-.gform_wrapper.gravity-theme input[type=datetime-local],
-.gform_wrapper.gravity-theme input[type=datetime],
-.gform_wrapper.gravity-theme input[type=email],
-.gform_wrapper.gravity-theme input[type=month],
-.gform_wrapper.gravity-theme input[type=number],
-.gform_wrapper.gravity-theme input[type=password],
-.gform_wrapper.gravity-theme input[type=search],
-.gform_wrapper.gravity-theme input[type=tel],
-.gform_wrapper.gravity-theme input[type=text],
-.gform_wrapper.gravity-theme input[type=time],
-.gform_wrapper.gravity-theme input[type=url],
-.gform_wrapper.gravity-theme input[type=week], .gform_wrapper.gravity-theme select, .gform_wrapper.gravity-theme textarea {
-    border-radius: 13px;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    padding: 15px !important;
+/*CONTACT PAGE*/
+
+._contact .info {
+    padding: 50px 200px 50px 150px;
+    background: #fff;
 }
 
-.gform_wrapper.gravity-theme textarea  {
-    padding: 18px !important;
+._contact h2 {
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #143258;
+    margin-bottom: 30px;
 }
 
-fieldset#field_1_6 {
-    text-align: center;
-    margin: 0;
+._contact .contact_items {
+    color: #143258;
 }
 
-fieldset#field_1_6 label#label_1_6_1 {
-    font-weight: 600;
-    font-size: 16px;
+._contact .contact_items a {
+    color: #303030;
 }
 
-
-fieldset#field_1_5 {
-    text-align: center;
+._contact .map {
+    display: flex;
+    justify-content: flex-end;
 }
 
-
-fieldset#field_1_5 label.gfield_consent_label {
-    font-weight: 600;
-    font-size: 16px;
+._contact .map iframe {
+    width: 100% !important;
 }
 
-.gform_wrapper.gravity-theme .gform_footer, .gform_wrapper.gravity-theme .gform_page_footer {
-    margin: 0;
-    padding: 0 0 20px;
-    text-align: center;
-}
-
-.gform_wrapper.gravity-theme .gform_footer button, .gform_wrapper.gravity-theme .gform_footer input, .gform_wrapper.gravity-theme .gform_page_footer button, .gform_wrapper.gravity-theme .gform_page_footer input {
-    padding: 5px 65px;
-    font-size: 20px;
-    border-radius: 10px;
-    height: unset;
-    background-color: #143258;
-    color: #fff;
-    border: none;
-    letter-spacing: 2px;
-}
-
-/*-- hide extra labels*/
-.gform_wrapper.gravity-theme .hidden_label .gfield_label, .gform_wrapper.gravity-theme .hidden_sub_label, .gform_wrapper.gravity-theme .screen-reader-text {
-    width: unset;
-    clip-path: unset;
-    position: unset;
-    height: unset;
-    font-weight: 600;
-    font-size: 16px;
-}
-
-.gfield_label.gfield_label_before_complex {
-    clip-path: inset(50%)!important;
-    display: none!important;
-}
-
-div#field_1_8 .gfield_label {
+._contact-form h2.gform_title {
     display: none;
-    margin: 0;
+}
+
+._contact-container {
+    padding: 70px 150px 0;
 }
 
 
-#field_1_5 span.gfield_required.gfield_required_text {
-    width: 0;
-    height: 0;
-    font-size:0;
-    
-}
-
-span.gfield_required.gfield_required_text::before {
-    content: "*";
-    width: 10px;
-    height: 10px;
-    display: block;
-    font-size: 30px;
-    position: absolute;
-    font-style: normal;
-}
-
-#field_1_5 span.gfield_required.gfield_required_text::before {color: red;}
-
-.gform_wrapper .gfield_required .gfield_required_custom, .gform_wrapper .gfield_required .gfield_required_text {
-    font-style: italic;
-    font-weight: 400;
-    width: 0;
-}
-
-.gfield_description.validation_message.gfield_validation_message {
-    border-radius: 10px;
-    padding: 5px;
-}
 
 
 @media only screen and (max-width: 1200px) {
@@ -475,15 +424,26 @@ span.gfield_required.gfield_required_text::before {
     }
 }
 
+@media only screen and (max-width: 991px) {
+    ._contact-container {
+        padding: 40px 15px 15px;
+    }
+
+    ._contact .info {
+        padding: 15px;
+    }
+
+}
+
 @media only screen and (max-width: 768px) {
     .item img {
         height:400px;
     }
-    .cards {
+    ._cards {
         padding: 20px;
     }
 
-    .cards .icon {
+    ._cards .icon {
         width: unset;
     }
 
@@ -543,6 +503,10 @@ span.gfield_required.gfield_required_text::before {
 
     .logo-bottom img {
         margin: 0;
+    }
+
+    ._contact .map iframe {
+        height: 400px;
     }
 
 }
